RESOLVED FIXED 58969
[chromium] Fix artefacts in compositor HUD when resizing
https://bugs.webkit.org/show_bug.cgi?id=58969
Summary [chromium] Fix artefacts in compositor HUD when resizing
Nat Duca
Reported 2011-04-20 00:25:02 PDT
[chromium] Fix artefacts in compositor HUD when resizing
Attachments
Patch (6.60 KB, patch)
2011-04-20 00:27 PDT, Nat Duca
no flags
Nat Duca
Comment 1 2011-04-20 00:27:13 PDT
James Robinson
Comment 2 2011-04-20 00:39:25 PDT
Comment on attachment 90321 [details] Patch Aha! I blame enne :P
James Robinson
Comment 3 2011-04-20 00:40:16 PDT
Comment on attachment 90321 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=90321&action=review > Source/WebCore/platform/graphics/chromium/LayerRendererChromium.cpp:988 > + m_headsUpDisplayProgram = adoptPtr(new CCHeadsUpDisplay::Program(m_context.get())); btw not to pick on you since you didn't do this but our Program impl really should have a static PassOwnPtr<> create() function and a private c'tor
WebKit Commit Bot
Comment 4 2011-04-21 14:19:17 PDT
The commit-queue encountered the following flaky tests while processing attachment 90321 [details]: http/tests/misc/favicon-loads-with-icon-loading-override.html bug 58412 (author: alice.liu@apple.com) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 5 2011-04-21 14:22:47 PDT
Comment on attachment 90321 [details] Patch Clearing flags on attachment: 90321 Committed r84546: <http://trac.webkit.org/changeset/84546>
WebKit Commit Bot
Comment 6 2011-04-21 14:22:50 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.